# enforcer

./: README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.py
enforcer/: enforce_types.py
github/workflows/: python-tests.yml
tests/: test_enforce_types.py
